[metadata]
name = fluent-discourse
version = 1.0.0
author = Grayden Shand
author_email = graydenshand@gmail.com
description = A fluent interface to the Discourse API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/graydenshand/fluent_discourse
project_urls =
    Bug Tracker = https://github.com/graydenshand/fluent_discourse/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src